# ocaml-onnxruntime

./: .gitignore  README.md  onnxruntime.opam
examples/: candy.ml  dune  symbolic.ml
src/config/: discover.ml
src/onnxruntime/: dune  onnxruntime.ml  onnxruntime.mli  wrapper.ml
src/stubs/: dune  stubs.ml
src/stubs/types/: dune  types.ml
